js/js.translator/testData/incremental/invalidation/fakeOverrideInterfaceFunctionQualifiers/lib2/object2.kt
object Module2Object: Module1Interface {
    fun testFunction1() = 1
}
